Add the main site repo as a submodule
Instead of using multiple branches—one for site content & the other for
generated site files—I decided to use separate repos, the only
difference is, the generated site files repo is a submodule in the site
content repo.

More info on hosting hugo on Github:
http://gohugo.io/tutorials/github-pages-blog/

Signed-off-by: James Oguya <oguyajames@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/vienna"]
 	path = themes/vienna
 	url = git@github.com:keichi/vienna.git
+[submodule "public"]
+	path = public
+	url = git@github.com:oguya/oguya.github.io.git
