Add keybase username
I finally got an invite to keybase! I shoud definitely add my keybase
profile[1] to my blog :D

1. https://keybase.io/oguya

Signed-off-by: James Oguya <oguyajames@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ disqus = "oguya"
 github = "oguya"
 twitter = "oguyajames"
 googleplus = "JamesOguya"
-#keybase = "jamesoguya"
+keybase = "oguya"
 #author = "James Oguya"
 #avatar = "/images/favicon-96x96.png"
 contact = "mailto:oguyajames@gmail.com"
