--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
     HUGO_BIN_URL: "https://github.com/spf13/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.tar.gz"
   pre:
     - sudo apt-get update; sudo apt-get install -yy --no-install-recommends wget
-    - wget --no-check-certificate ${HUGO_BIN_URL} -O hugo.tar.gz
+    - wget --no-check-certificate $HUGO_BIN_URL -O hugo.tar.gz
     - tar -xvf hugo.tar.gz
     - sudo cp hugo_${HUGO_VERSION}_linux_amd64/hugo_${HUGO_VERSION}_linux_amd64 /bin/hugo
 dependencies:
