--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,8 @@
 machine:
   environment:
     HUGO_VERSION: "0.19"
-    DOCKERCLOUD_STACK: "${CIRCLE_PROJECT_REPONAME//./-}-${CIRCLE_BRANCH}-${CIRCLE_SHA1:0:7}"
+    AUTHOR: "$(git log -n1 --format=%an ${CIRCLE_SHA1} | sed 's/[ |.]/-/' | tr '[:upper:]' '[:lower:]')"
+    DOCKERCLOUD_STACK: "${CIRCLE_PROJECT_REPONAME//./-}-${AUTHOR}-${CIRCLE_BRANCH}-${CIRCLE_SHA1:0:7}"
     HUGO_BASE_URL: "http://0.0.0.0:1313"
     HUGO_BIN_URL: "https://github.com/spf13/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.tar.gz"
   post:
