Circle CI: Change deployment to staging
Honestly, production would be on Github which is already auto-deployed
using Github pages, the rest is just for staging and for kicks ;)

Signed-off-by: James Oguya <oguyajames@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -22,8 +22,8 @@ test:
 #    - sed -i "s/PUT_YOUR_BRANCH_TAG_HERE/$CIRCLE_BRANCH/;s/PUT_RANDOM_PORT_HERE://" docker-cloud.yml
 
 deployment:
-  production:
-    branch: master
+  staging:
+    branch: "${CIRCLE_BRANCH}"
     commands:
       - cd ~/oguya.github.io-site-content
       - docker-cloud stack create --name=${DOCKERCLOUD_STACK} -f docker-cloud.yml && docker-cloud stack start ${DOCKERCLOUD_STACK}
