--- a/circle.yml
+++ b/circle.yml
@@ -22,8 +22,13 @@ test:
 #    - sed -i "s/PUT_YOUR_BRANCH_TAG_HERE/$CIRCLE_BRANCH/;s/PUT_RANDOM_PORT_HERE://" docker-cloud.yml
 
 deployment:
-  staging:
+  dev:
     branch: "${CIRCLE_BRANCH}"
     commands:
       - cd ~/oguya.github.io-site-content
       - docker-cloud stack create --name=${DOCKERCLOUD_STACK} -f docker-cloud.yml && docker-cloud stack start ${DOCKERCLOUD_STACK}
+#  production:
+#    branch: "${CIRCLE_BRANCH}"
+#    commands:
+#      - cd ~/oguya.github.io-site-content
+#      - docker-cloud stack create --name=${DOCKERCLOUD_STACK} -f docker-cloud.yml && docker-cloud stack start ${DOCKERCLOUD_STACK}
