Circle CI: staging deploy in post test
Signed-off-by: James Oguya <oguyajames@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -18,11 +18,16 @@ test:
     - cd ~/oguya.github.io-site-content
     - hugo -d .
 
+## deploy to docker-cloud branch staging
+  post:
+      - cd ~/oguya.github.io-site-content
+      - docker-cloud stack create --name=${DOCKERCLOUD_STACK} -f docker-cloud.yml && docker-cloud stack start ${DOCKERCLOUD_STACK}
+
 #  post:
 #    - sed -i "s/PUT_YOUR_BRANCH_TAG_HERE/$CIRCLE_BRANCH/;s/PUT_RANDOM_PORT_HERE://" docker-cloud.yml
 
 deployment:
-  staging:
+  production:
     branch: master
     commands:
       - cd ~/oguya.github.io-site-content
