Circle CI: Feature test; custom vars. in test::post
Signed-off-by: James Oguya <oguyajames@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,7 @@ test:
       - cd ~/oguya.github.io-site-content
       - >
         author=$(git log -n1 --format=%an ${CIRCLE_SHA1} | sed 's/[ |.]/-/' | tr '[:upper:]' '[:lower:]')
-        stack_name=${DOCKERCLOUD_STACK/AUTHOR/$author/"}
+        stack_name="${CIRCLE_PROJECT_REPONAME//./-}-${author}-${CIRCLE_BRANCH}-${CIRCLE_SHA1:0:7}"
       - docker-cloud stack create --name=${stack_name} -f docker-cloud.yml && docker-cloud stack start ${stack_name}
 
 #  post:
