Circle CI: Missed a key variable :(
Signed-off-by: James Oguya <oguyajames@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -27,6 +27,7 @@ test:
       - >
         export author=$(git log -n1 --format=%an ${CIRCLE_SHA1} | sed 's/[ |.]/-/' | tr '[:upper:]' '[:lower:]');
         export stack_name="${CIRCLE_PROJECT_REPONAME//./-}-${author}-${CIRCLE_BRANCH}";
+        check_stack=$(docker-cloud stack ls | grep -c ${stack_name});
         if [[ $check_stack -ne 0 ]]; then
             echo "Redeploying the existing stack: ${stack_name}"
             docker-cloud stack redeploy ${stack_name}
